     explicitly)
  2. The delayed effect of {x} is that _x_ is cleared at the end of the intro
     pattern
  3. A clear switch immediately before a view application like {x}/v is
     translated to /v{x}.
  In particular rule 3 lets one write {x}/v even if v uses the variable x:
  indeed the view is executed before the renaming.

Changes from 8.8.0 to 8.8.1
===========================

Kernel

- Fix a critical bug with cofixpoints and vm_compute/native_compute (#7333).
- Fix a critical bug with inlining of polymorphic constants (#7615).

Notations

- Fixed unexpected collision between only-parsing and only-printing
  notations (issue #7462).

Changes from 8.8+beta1 to 8.8.0
===============================

Tools

- Asynchronous proof delegation policy was fixed. Since version 8.7
  Coq was ignoring previous runs and the -async-proofs-delegation-threshold
  option did not have the expected behavior.

Tactic language

- The undocumented "nameless" forms `fix N`, `cofix` have been
  deprecated; please use `fix ident N /cofix ident` to explicitely
  name the (co)fixpoint hypothesis to be introduced.

Documentation

- The reference manual is now fully ported to Sphinx.

Other small deprecations and bug fixes.

Changes from 8.7.2 to 8.8+beta1
===============================

Kernel

- Support for template polymorphism for definitions was removed. May trigger
  more "universe inconsistency" errors in rare occasions.
- Fixpoints are no longer allowed on non-recursive inductive types.

Notations

- Recursive notations with the recursive pattern repeating on the
  right (e.g. "( x ; .. ; y ; z )") now supported.
- Notations with a specific level for the leftmost nonterminal,
  when printing-only, are supported.
- Notations can now refer to the syntactic category of patterns (as in
  "fun 'pat =>" or "match p with pat => ... end"). Two variants are
  available, depending on whether a single variable is considered as a
  pattern or not.